--- a/Die_Elite_Webseite/index.html
+++ b/Die_Elite_Webseite/index.html
@@ -25,7 +25,7 @@
             <a href="ret.html">
                 <div class="background" id="drei">
                     <div class="container">
-                        <p>Retrospktive</p>
+                        <p>Retrospektive</p>
                     </div>
                 </div>
             </a>
