--- a/Die_Elite_Webseite/ki.html
+++ b/Die_Elite_Webseite/ki.html
@@ -4,7 +4,7 @@
     </head>
 
 <div class="header" style="background-color: #00a2ff; width: 100%; height: 80px; text-align: center; font-size: 40px;">
-    Künstiche Intelligenz
+    Künstliche Intelligenz
 </div>
 <div class="vid">
 </div>
